--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,17 @@ dependencies:
   cupertino_icons: ^1.0.2
   stacked: ^2.2.7+1
   stacked_services: ^0.8.16
+  firebase_storage: ^10.2.4
+  cloud_firestore: ^3.1.5
+  firebase_auth: ^3.3.4
+  firebase_core: ^1.10.6
+  animations: ^2.0.2
+  path_provider: ^2.0.8
+  file_picker: ^4.2.4
+  shimmer: ^2.0.0
+  audioplayers: ^0.20.1
+  permission_handler: ^8.3.0
+  dio: ^4.0.4
 
 dev_dependencies:
   flutter_test:
@@ -62,9 +73,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
