--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   audioplayers: ^0.20.1
   permission_handler: ^8.3.0
   dio: ^4.0.4
+  open_file: ^3.2.1
+
 
 dev_dependencies:
   flutter_test:
