--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,10 +47,10 @@ dependencies:
   audioplayers: ^0.20.1
   permission_handler: ^8.3.0
   dio: ^4.0.4
-  open_file: ^3.2.1
   objectbox: ^1.3.0
   objectbox_flutter_libs: ^1.3.0
   path: ^1.8.0
+  cached_network_image: ^3.2.0
 
 
 dev_dependencies:
